# ia_ft

./: .gitignore  .gitmodules  MIGRATION_GUIDE.md  PILLOW_TO_OPENCV_MIGRATION.md  README.md  config.py  main.py  pyproject.toml  test_menu.py  test_refactoring.py
back/: main.py  pyproject.toml  utils.py
back/aruco/: cli.py  main.py
back/aruco/src/: detector.py  utils.py
core/: __init__.py  device_manager.py  image_manager.py
docs/: MANUAL_TESTING.md  REFACTORING_SUMMARY.md  VERIFICATION_REPORT.md
front/: package-lock.json  package.json
front/src/: App.css  App.jsx  api.js  styles.css
front/src/components/: ImageOverlay.jsx  JSONTree.jsx
manual_tests/: README.md  __init__.py  compare_detection.py  inspect_model.py  test_detection.py  test_device_manager.py  test_full_pipeline.py  test_image_manager.py  test_measurement.py  test_segmentation.py
modules/detection/: __init__.py  detector.py  models.py
modules/measurement/: __init__.py  aruco_detector.py  measurement_utils.py  measurer.py  models.py
modules/segmentation/: __init__.py  mask_utils.py  models.py  segmentor.py
services/: __init__.py  pipeline_service.py
utils/: __init__.py  helpers.py
webui/: MONITORING.md  README.md  app.py  extra.py  handlers.py  train.py
