[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.2",
    "sam-2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.208",
]

[tool.uv.sources]
sam-2 = { path = "../meta-sam2", editable = true }
